[package]
name = "rust-redis-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
redis = "0.23.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
signal-hook = "0.3.17"
tokio = { version = "^1.34.0", features = ["full"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.3" }

[profile.dev]
opt-level = 0

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
